# fluffy-fiesta

./: .env_sample  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
network/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
network/migrations/: 0001_initial.py  0002_alter_network_products_alter_product_network.py  0003_remove_network_products_alter_product_network.py
users/migrations/: 0001_initial.py
